# DIV-Games-Studio

./: .gitignore  .travis.yml  AndroidAppSettings.cfg  AndroidBuild.sh  CMakeLists.txt  CODE_OF_CONDUCT.md  GRAF_P.DIV  Makefile.droid  Makefile.html  Makefile.html2  README.md  bitbucket-pipelines.yml  cdrom.c  cdrom.cpp  cdrom.h  credits.txt  det_vesa.cpp  div.c  div.cpp  div.h  div_stub.h  divasm.cpp  divbasic.cpp  divbin.cpp  divbrow.c  divbrow.cpp  divc.c  divc.cpp  divcalc.cpp  divcdrom.cpp  divcdrom.h  divcolor.cpp  divdll.h  divdll1.c  divdll2.c  divdsktp.cpp  divedit.cpp  diveffec.c  diveffec.cpp  divfont.cpp  (+64 more)
dll/: ASCII.CPP  Agua.cpp  Demo0.cpp  Demo1.cpp  Demo2.cpp  Hboy.cpp  Ss1.cpp  Water.cpp  ascii.c  demo0.c  demo1.c  demo2.c  div.h  hboy.c  modea.c  modea.cpp  phys.c  pixel.c  ss0.c  ss1.c  water.c  zx.c
dll/Examples/: EXAMPLE1.PRG  example1.fpg  example2.fpg  example2.prg  example3.fpg  example3.prg  example4.fpg  example4.prg  example5.prg  ld.fpg  level demo.prg
dll/sdlgfx/: SDL_framerate.c  SDL_framerate.h  SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c  SDL_rotozoom.h
dll/spectrum/: bits.c  bits.h  colourspace.c  colourspace.h  gscrplus.c  icondata.h  libscrplus.c  libscrplus.h  scrplus.c  spec.c
docker/amiga/: Dockerfile
docker/amiga2/: Dockerfile  prep.sh
docker/pi/: Dockerfile
help/: WLD_VIEW.FPG  Wld_view.wld  fig.fpg  help.div  help.enc  help.fig  help.fli  help.fnt  help.fpg  help.idx  help.map  help.pal  help.pcm  help.pcx  help.xm
other/: divdll2.c
runtime/: c.cpp  cdrom.c  d.c  d.cpp  det_vesa.cpp  divdll.h  divfli.c  divfli.cpp  divkeybo.c  divlengu.c  divlengu.cpp  divmixer.cpp  divmixer.hpp  divsound.c  divsound.cpp  divsound.h  divtimer.cpp  f.c  i.c  i.cpp  ia.cpp  include.div  inter.h  kernel.cpp  math_.h  mouse.c  mouse.cpp  s.c  s.cpp  text.h  v.c  v.cpp  zlib.h
runtime/debug/: d.c  kernel.cpp  osdep.c
runtime/vpe/: atan.h  draw_sw.c  fixed.c  gfx.c  globals.c  hard.h  internal.h  load.c  mem.c  object.c  tex.h  update.c  vpeasm.c  vpedll.c  zone.c  zone.h
src/: 2acabada.hpp  _clang-format  cdrom.c  cdrom.h  det_vesa.c  div.c  div.h  div_stub.h  divasm.c  divbasic.c  divbin.c  divbrow.c  divc.c  divcalc.c  divcdrom.c  divcdrom.h  divcolor.c  divdll.h  divdsktp.c  divedit.c  diveffec.c  divfont.c  divforma.c  divfpg.c  divgama.c  divhandl.c  divhelp.c  divinsta.c  divkeybo.c  divkeybo.h  divlengu.c  divmap3d.c  divmap3d.hpp  divmix.c  divmixer.c  divmouse.c  divpack.c  divpaint.c  divpalet.c  divpcm.c  (+29 more)
src/div1run/: 06x08.h  c.c  cases.h  cdrom.c  cdrom.h  divfli.h  divkeybo.c  divkeybo.h  divsound.h  dummysound.c  f.c  hboy.c  i.c  ia.c  inter.h  joy.c  mates.h  math_.h  mouse.c  net.h  pcmtowav.c  s.c  sysdac.h  tfanimat.h  tflib.h  topflc.h  v.c  vesa.h
src/div1run/unused/: cdrom.c  divfli.c  hboy.c
src/judas/: judas.c  judas.cmd  judas.doc  judas.h  judasasm.asm  judascfg.h  judascfg.inc  judasdma.c  judasdma.h  judaserr.h  judasgus.h  judasgus.inc  judasio.c  judasmem.c  judasmem.h  judasmod.c  judasraw.c  judass3m.c  judassmp.c  judastbl.c  judastbl.h  judaswav.c  judasxm.c  kbd.c  kbd.h  kbdasm.asm  timer.c  timer.h  timerasm.asm
src/osdep/: osdep.c
src/osx/: fmemopen.c  fmemopen.h
src/other/: divcomp.c  divdll1.c  divdll2.c  divfrm.c  divsb.c  pack.c  pakunpak.c
src/runner/: d  r.c  runner.c
src/runtime/: 06x08.h  cdrom.c  cdrom.h  det_vesa.c  divfli.c  divfli.h  divkeybo.c  divkeybo.h  divlengu.c  divmixer.c  divmixer.hpp  divsound.c  divsound.h  divtimer.cpp  f.c  i.c  ia.c  include.div  inter.h  joy.cpp  mates.h  mouse.c  net.c  net.h  netlib.h  s.c  text.h  tfanimat.h  tflib.h  topflc.h  v.c
src/runtime/debug/: d.c  decompiler.c  kernel.cpp
src/runtime/fli/: flxplay.c
src/runtime/vpe/: atan.h  c.bat  draw_cw.c  draw_f.c  draw_fa.asm  draw_o.c  draw_oa.asm  draw_sw.c  draw_wa.asm  fixed.c  floop.inc  gfx.c  gfx.h  globals.c  hard.c  hard.h  internal.h  load.c  mem.c  object.c  oloop.inc  omloop.inc  otloop.inc  pal.h  scan.c  tex.h  update.c  view.c  vpe.c  vpe.h  vpe.inc  vpeasm.c  vpedll.bak  vpedll.c  wloop.inc  wmloop.inc  wtloop.inc  zone.c  zone.h
src/shared/: divdll.h  divsound.h  keycodes.h  mikedll.c  netlib.h  osdep.c  osdep.h  sfmalloc.c  unzip.c  unzip.h
src/shared/lib/: mode7.c
src/shared/lib/portrend/: portapi.c  portrend.c  portrend.h
src/shared/lib/sdlgfx/: SDL_framerate.c  SDL_framerate.h  SDL_gfxBlitFunc.c  SDL_gfxBlitFunc.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotozoom.c  SDL_rotozoom.h
src/shared/lib/zip/src/: miniz.h  zip.c  zzip.h
src/shared/osdep/: amiga.c  n3ds.c  n3ds.h  osd_funcs.h  osd_sdl.h  osd_sdl12.c  osd_sdl12.h  osd_sdl2.c  osd_sdl2.h  psp.c
src/shared/run/: c.c  divfli.c  divkeybo.c  divsound.c  ia.c  mouse.c  pcmtowav.c  topflc.h  v.c
src/visor/: animated.c  complex.c  complex.hpp  fileanim.c  fileanim.hpp  global.c  global.hpp  hlrender.c  llrender.c  llrender.hpp  resource.c  sprite3d.c  sprite3d.hpp  struct.hpp  t.h  visor.c
src/visor/other/: main.c
src/win/: osdepwin.c
system/: Div.map  GRAF_G.DIV  GRAF_P.DIV  brush.fpg  lenguaje.div  lenguaje.int  ltlex.def  ltobj.def  session.dtf  tab_cuad.div
tools/: 3ds.cmake  amiga.cmake  amiga.sh  app.sh  atarist.cmake  defaults.cmake  folder2div.bat  gcw.cmake  gitdatelog.sh  gp2x.cmake  linux.cmake  makedll.sh  makedroid.bat  makegcw.bat  makehtml.bat  makepnd.bat  osx.cmake  pandora.cmake  pi.cmake  ps2.cmake  psp.cmake  win.cmake  windows.cmake  zip2div.bat  zip2divarena.sh
visor/: animated.cpp  animated.hpp  complex.c  complex.cpp  complex.hpp  errores.hpp  global.c  hlrender.cpp  hlrender.hpp  llrender.c  resource.c  resource.cpp  resource.hpp  sprite3d.c  t.h  visor.c  visor.cpp
visor/other/: main.c
